# SerevrClientBoostAsio

./: CMakeLists.txt  main.cpp
src/msg/: chat_message.hpp  msg.hpp  msg_client.cpp  msg_server.cpp
src/server/asio/: synserver.cpp  synserver.hpp
